@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{DAD16094-9C34-453A-9F77-DD04EA1B9794}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicObject.cs" />
+    <Compile Include="BasicObjectSerializer.cs" />
     <Compile Include="Collection.cs" />
     <Compile Include="HashUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
